--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: incase_app
+name: Incase
 description: InCase app for buildings.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
@@ -24,6 +24,8 @@ dependencies:
   get_it: ^7.6.0
   freezed_annotation: ^2.2.0
   keyboard_dismisser: ^3.0.0
+  shimmer: ^3.0.0
+  webview_flutter: ^4.2.2
 
 dev_dependencies:
   flutter_test:
