--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   keyboard_dismisser: ^3.0.0
   shimmer: ^3.0.0
   webview_flutter: ^4.2.2
+  image_picker: ^1.0.1
+  flutter_cube: ^0.1.1
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +41,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icons/
+    - assets/360_rooms/
   fonts:
     - family: Product_Sans
       fonts:
